crates/au-cli/tests/it/snapshots/it__scenarios__body-section-swap.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-section-out-of-order",
      "message": "body section '# Decision' appears before '# Background', but 'Background' is declared earlier in the template",
      "related": [
        {
          "file": "<root>/scenarios/body-section-swap/swapped.md",
          "line_col": {
            "end": {
              "col": 1,
              "line": 11
            },
            "start": {
              "col": 1,
              "line": 10
            }
          },
          "range": {
            "end": 138,
            "start": 125
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-section-swap/swapped.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 7
          },
          "start": {
            "col": 1,
            "line": 6
          }
        },
        "range": {
          "end": 78,
          "start": 67
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 23,
                        "line_col": {
                          "end": {
                            "col": 24,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-section-swap/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-section-swap"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-section-swap"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-section-swap/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 78,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 67
            },
            "text": "Decision"
          },
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 138,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 125
            },
            "text": "Background"
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/body-section-swap/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 61,
                        "line_col": {
                          "end": {
                            "col": 43,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/body-section-swap/swapped.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Adopt SQLite for the dev DB"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Adopt SQLite for the dev DB"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-section-swap/swapped.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Background",
            "optional": true,
            "path": [
              "Background"
            ],
            "present": true,
            "span": {
              "end": 138,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 125
            }
          },
          {
            "depth": 1,
            "name": "Decision",
            "optional": false,
            "path": [
              "Decision"
            ],
            "present": true,
            "span": {
              "end": 78,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 67
            }
          }
        ]
      }
    ]
  }
}
