crates/au-cli/tests/it/snapshots/it__scenarios__body-tuple.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 16,
                        "line_col": {
                          "end": {
                            "col": 17,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-tuple/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-tuple"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-tuple"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-tuple/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "[:pos] (10, 20)",
            "kind": "inline_code",
            "span": {
              "end": 63,
              "line_col": {
                "end": {
                  "col": 37,
                  "line": 6
                },
                "start": {
                  "col": 20,
                  "line": 6
                }
              },
              "start": 46
            }
          }
        ],
        "claim": [
          "sprite"
        ],
        "closure": [
          "sprite"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "pos",
            "origins": [
              {
                "name": "sprite",
                "origin_path": "<root>/scenarios/body-tuple/type/sprite.type.yaml",
                "required": true,
                "shape": "(Number, Number)"
              }
            ],
            "required": true,
            "shape": "(Number, Number)"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 63,
                        "line_col": {
                          "end": {
                            "col": 37,
                            "line": 6
                          },
                          "start": {
                            "col": 20,
                            "line": 6
                          }
                        },
                        "start": 46
                      },
                      "file": "<root>/scenarios/body-tuple/hero.md"
                    },
                    "section_path": [],
                    "surface": "body_inline_code",
                    "value": {
                      "elements": [
                        {
                          "value": {
                            "kind": "scalar",
                            "value": 10
                          }
                        },
                        {
                          "value": {
                            "kind": "scalar",
                            "value": 20
                          }
                        }
                      ],
                      "kind": "tuple"
                    }
                  }
                ],
                "value": {
                  "elements": [
                    {
                      "value": {
                        "kind": "scalar",
                        "value": 10
                      }
                    },
                    {
                      "value": {
                        "kind": "scalar",
                        "value": 20
                      }
                    }
                  ],
                  "kind": "tuple"
                }
              }
            ],
            "field": "pos"
          }
        ],
        "file": "<root>/scenarios/body-tuple/hero.md",
        "section_presence": null
      }
    ]
  }
}
